Quorum/Library/Tests/TypeChecker/Pass/ExpAssignBoolObjUndefined.quorum
class Main
    action Main
        Boolean bool
        bool = cast(Boolean, undefined)
        if bool = undefined
            output "passed"
        end
    end
end