Quorum/Library/Tests/TypeChecker/Fail/ExpAssignBoolObjIntegerField.quorum
class main
    Boolean bool
    action Main
        bool = cast(Boolean, 5)
    end
end